--- a/node/package.json
+++ b/node/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.12.12"
+    "@types/node": "^20.12.12",
+    "@types/bun": "latest"
   },
   "dependencies": {
     "chalk": "^5.3.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
