--- a/node/package.json
+++ b/node/package.json
@@ -5,20 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "bun src/server.ts"
+    "dev": "tsx src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/bun": "latest",
     "@types/node": "^20.12.12",
     "eslint": "^8.57.0",
-    "@rocketseat/eslint-config": "^2.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.0"
   },
   "dependencies": {
-    "chalk": "^5.3.0"
+    "@inquirer/prompts": "^5.0.3",
+    "chalk": "^5.3.0",
+    "tsx": "^4.10.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
