--- a/node/package.json
+++ b/node/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@inquirer/prompts": "^5.0.3",
     "chalk": "^5.3.0",
+    "nanospinner": "^1.1.0",
     "tsx": "^4.10.4"
   },
   "peerDependencies": {
