--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0"
   },
   "dependencies": {
-    "@inquirer/prompts": "^5.0.3",
-    "chalk": "^5.3.0",
-    "nanospinner": "^1.1.0",
+    "@clack/prompts": "^0.7.0",
     "tsx": "^4.10.4"
   },
   "peerDependencies": {
